--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.12.2",
+    "canvas": "^3.2.0",
     "critters": "^0.0.23",
     "embla-carousel-react": "^8.6.0",
     "jalaali-js": "^1.2.8",
