--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "use-react-slider": "^1.0.0"
   },
   "devDependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@tailwindcss/postcss": "^4",
     "@types/jalaali-js": "^1.2.0",
     "@types/node": "^20",
