--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "canvas": "^3.2.0",
     "critters": "^0.0.23",
     "embla-carousel-react": "^8.6.0",
+    "idb": "^8.0.3",
     "jalaali-js": "^1.2.8",
     "next": "16.0.0",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
