Implement IIS compatibility improvements in server configuration and NextAuth handling. Update server.js to support standalone mode and normalize URLs to address IIS pipe path issues. Enhance web.config with headers for original URL preservation and forwarding. Introduce URL normalization in NextAuth API routes to ensure correct action parsing. This update aims to improve authentication flow reliability when deployed behind IIS.

--- a/web.config
+++ b/web.config
@@ -34,7 +34,24 @@
           <action type="Rewrite" url="server.js"/>
         </rule>
       </rules>
+      <!-- CRITICAL: Preserve original URL in headers to help NextAuth parse actions correctly -->
+      <outboundRules>
+        <rule name="PreserveOriginalURL">
+          <match serverVariable="RESPONSE_X_ORIGINAL_URL" pattern=".*" />
+          <action type="Rewrite" value="{REQUEST_URI}" />
+        </rule>
+      </outboundRules>
     </rewrite>
+    
+    <!-- CRITICAL: Forward original host and protocol headers for NextAuth -->
+    <httpProtocol>
+      <customHeaders>
+        <!-- These headers help NextAuth determine the correct base URL when behind IIS -->
+        <add name="X-Forwarded-Host" value="{HTTP_HOST}" />
+        <add name="X-Forwarded-Proto" value="https" />
+        <add name="X-Forwarded-For" value="{REMOTE_ADDR}" />
+      </customHeaders>
+    </httpProtocol>
     
     <!-- 'bin' directory has no special meaning in node.js and apps can be placed in it -->
     <security>
