--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
+    "dev:mobile": "HOSTNAME=0.0.0.0 node server.js",
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint",
