--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.9.2",
+    "@types/qrcode": "^1.5.6",
     "axios": "^1.12.2",
     "canvas": "^3.2.0",
     "critters": "^0.0.23",
@@ -23,6 +24,7 @@
     "jalaali-js": "^1.2.8",
     "next": "16.0.0",
     "next-auth": "^5.0.0-beta.30",
+    "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
