--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "idb": "^8.0.3",
     "jalaali-js": "^1.2.8",
+    "lucide-react": "^0.556.0",
     "next": "16.0.0",
     "next-auth": "^5.0.0-beta.30",
     "qrcode": "^1.5.4",
